# celestium

./: .env.example  .flake8  .gitignore  README.md  SPEAKER_DIARIZATION.md  UPGRADE_GUIDE.md  playground.py  pyproject.toml  test_setup.py  transaction.json
celestium/: add_user.py  approval.py  config.py  speaker_verification.py  utils.py
celestium/xahau/: __init__.py
