[tool.poetry]
name = "celestium"
version = "0.0.1"
description = ""
authors = ["Denis Angell <dangell@transia.co>"]

[tool.poetry.dependencies]
python = "^3.10.0,<3.13"
speechrecognition = "^3.14.3"
librosa = "^0.10.2.post1"
pyaudio = "^0.2.14"
pyttsx3 = "^2.98"
python-speech-features = "^0.6"
google-cloud-speech = "^2.27.0"
noisereduce = "^3.0.3"
# xahau-py = "^3.0.0"  # Commented out - causes httpx conflict with firebase-admin
pydub = "^0.25.1"
python-dotenv = "^1.0.0"
soundfile = "^0.12.0"

[tool.poetry.extras]
ml = ["openai-whisper", "pyannote-audio", "torch", "torchaudio"]

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
openai-whisper = "^20231117"
pyannote-audio = "^3.0.0"
torch = "^2.0.0"
torchaudio = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
